# BirdNET-CustomClassifierSuite

./: .gitignore  ENVIRONMENT_SETUP.md  FOLDER_PICKER_GUIDE.md  FOLDER_PICKER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  UI_INTEGRATION_COMPLETE.md  all_experiments.csv  evaluate_results.py  evaluation_rerun_log.txt  positive_counts_by_recorder_date.txt  pyproject.toml  pytest.ini  requirements-frozen.txt  requirements.txt  setup.ps1  setup.sh  setup_env.ps1  stage1sweep.csv  stage2sweep.csv  stage3sweep.csv  stage4.csv  stage4sweep.csv  sweep0.csv
.github/instructions/: first_instructions.instructions.md
birdnet_custom_classifier_suite/cli/: __init__.py  __main__.py  analyze.py  ui.py
birdnet_custom_classifier_suite/eval_toolkit/: __init__.py  constants.py  rank.py  report.py  review.py  schema.py  signature.py
birdnet_custom_classifier_suite/pipeline/: collect_experiments.py  evaluate_results.py  make_training_package.py  make_validation_package.py  pipeline.py  run_inference.ps1
birdnet_custom_classifier_suite/sweeps/: run_sweep.py  sweep_generator.py
birdnet_custom_classifier_suite/ui/: __init__.py
birdnet_custom_classifier_suite/utils/: gpu_config.py
birdnet_frog_training/eval_toolkit/: constants.py  schema.py
birdnet_frog_training/pipeline/: collect_experiments.py  evaluate_results.py  make_training_package.py  pipeline.py  run_inference.ps1
config/: base.yaml  example.yaml  first_trial_real.yaml  model01.yaml  test_quick.yaml
docs/: DATA_COMPOSITION_SWEEPS.md  DATA_MODEL.md  DATA_SPLITS.md  ENVIRONMENT_SETUP.md  EVALUATION_PIPELINE.md  PIPELINE_OVERVIEW.md  QUICK_REFERENCE.md  README.md  RE_EVALUATION_GUIDE.md  SWEEPS.md  Tylers_laptop_gpu_specs.txt  UI_ARCHITECTURE.md
results/: all_experiments.csv
scripts/: analyze_evaluation_changes.py  analyze_positive_counts_by_date.py  analyze_stage6_selection.py  cleanup_validation_folders.py  evaluate_results.py  evaluate_stage17.py  find_trial.py  make_splits.py  make_training_package.py  pipeline.py  reevaluate.py  rerun_all_evaluations.py  run_analysis.py  run_inference.ps1  run_old_model_additional_sensitivities.py  run_sweep.py  setup_env.ps1  streamlit_app.py  sweep_generator.py  test_data_composition.py  train.ps1
tests/: test_data_composition.py  test_eval_toolkit.py  test_folder_picker.py  test_ui_subset_integration.py
utils/: config.py
(+250 files in other folders)
