[project]
name = "birdnet-custom-classifier-suite"
version = "0.1.0"
description = "Extended BirdNET training, inference, and evaluation suite for custom classifiers."
authors = [{ name = "Tyler Schwenk" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow==2.15.1",
    "keras==2.15.0",
    "keras-tuner",
    "soundfile",
    "librosa",
    "pyyaml",
    "pandas",
    "numpy",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["birdnet_custom_classifier_suite*"]
exclude = ["data*", "config*", "external*", "AudioData*", "experiments*"]
